# mini-os

./: Cargo.toml  LICENSE  README.md
src/: main.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
