[package]
name = "mini-os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader  = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.9"
uart_16550 = "0.2.0"
volatile = "0.4.6"
x86_64 = "0.14.2"

# Comment out when cargo test, https://github.com/rust-lang/cargo/issues/7359
# [profile.dev]
# panic = "abort"

[profile.release]
panic = "abort"

[[test]]
name = "should_panic"
harness = false

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"] # 去掉`"-display", "none"`可显示系统界面
test-success-exit-code = 33         # (0x10(QemuExitCode::Success) << 1) | 1
test-timeout = 5       # seconds